syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.automateorder.smartwarehouse";
option java_outer_classname = "AutomateOrderServiceImpl";

package smartwarehouse;

service AutomateOrderService{
  rpc MakeOrder(OrderRequest) returns (Confirmation) {}
  rpc StopOrder(OrderRequest) returns (Confirmation) {}
  rpc Status(stream OrderRequest) returns (stream OrderStatus) {}
}

message OrderRequest {
  string item_name = 1;
  int32 quantity = 2;
  string customer_name = 3;
}

message Confirmation {
  string message = 1;
}

message OrderStatus {
  string message = 1;
}

